# Nav-Mesh-OkNN

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  experiment.cpp  gen-pts.sh  gen.cpp  gen_meshes.sh  gen_poly2.sh  gen_pts.sh  gen_run.sh  gen_test.sh  gridmap2poly.cpp  nn_experiment.sh  preprocess_experiment.sh  run-exp.sh  s1run.sh  s2run.sh  scenariorunner.cpp  test-s2-300.in  test-s2-9000.in  test.cpp  test300.in  test9000.in  test_all.sh  test_io.cpp  testing.cpp  vary_k.sh  vary_map.sh  vary_t.sh  visualiser.cpp
EDBT/: EDBTObstacles.h  EDBTRtree.h  EDBTknn.cpp  EDBTknn.h  Graph.cpp  Graph.h
analysis/: Analysis.ipynb  SoCS18.py  journal_paper.py  raw_results.txt  utilities.py
fadeutils/: polymap.cpp  polymap.h
generator/: genPoints.h  park2poly.h
helpers/: cpool.h  geometry.cpp  geometry.h  rtree.h
index/: knnMeshEdge.cpp  knnMeshEdge.h  knnMeshFence.cpp  knnMeshFence.h
inputs/: 9000-cluster.in  9000.in  AR0602SR.in  CatwalkAlley.in  CatwalkAlley_cluster.in  brc202d.in
meshes/: 1200.mesh  1500.mesh  1800.mesh  2100.mesh  2400.mesh  2700.mesh  300.mesh  3300.mesh  3600.mesh  3900.mesh  4200.mesh  4500.mesh  600.mesh  arena.mesh  aurora.mesh  hard.mesh  square.mesh
points/: 9000-cluster.points  9000-corner2.points  9000-nn.points  9000-query-cluster.points  9000-start-cluster.points  AR0602SR-pts10.points  AR0602SR_pts10.points  CatwalkAlley_cluster10.points  CatwalkAlley_pts10.points  arena.points  aurora.points  brc202d_pts20.points  polys300_pts100.points  polys300_pts15.points  polys300_pts20.points  polys300_pts5.points  polys300_pts500.points  polys9000_pts15.points  polys9000_pts30.points  polys9000_pts5.points  polys9000_pts9000.points  random512-40-2-pts10.points  s1-poly1200-pts1200.points  s1-poly1500-pts1500.points  s1-poly1800-pts1800.points  s1-poly2100-pts2100.points  s1-poly2400-pts2400.points  s1-poly2700-pts2700.points  s1-poly300-pts300.points  s1-poly3000-pts3000.points  s1-poly3300-pts3300.points  s1-poly3600-pts3600.points  s1-poly3900-pts3900.points  s1-poly4200-pts4200.points  s1-poly4500-pts4500.points  s1-poly4800-pts4800.points  s1-poly5100-pts5100.points  s1-poly5400-pts5400.points  s1-poly5700-pts5700.points  s1-poly600-pts600.points  (+269 more)
polygons/: 1200.poly  1200.poly2  1500.poly  1500.poly2  1800.poly  1800.poly2  2100.poly  2100.poly2  2400.poly  2400.poly2  2700.poly  2700.poly2  300.poly  300.poly2  3000.poly  3000.poly2  3300.poly  3300.poly2  3600.poly  3600.poly2  3900.poly  3900.poly2  4200.poly  4200.poly2  4500.poly  4500.poly2  4800.poly  (+38 more)
(+554 files in other folders)
